@@ -27,8 +27,8 @@ import name.richardson.james.bukkit.chatreplace.AbstractPattern;
 public class AppendPattern extends AbstractPattern {
 
   public enum Location {
-    START,
-    END
+    END,
+    START
   }
 
   /** The location to append any alterations. */
@@ -41,7 +41,7 @@ public class AppendPattern extends AbstractPattern {
    * @param values the values to use in case of a match
    * @param appendAt the location to append any matches
    */
-  public AppendPattern(final String pattern, final List<?> values, String permissionName, final Location appendAt) throws PatternSyntaxException {
+  public AppendPattern(final String pattern, final List<?> values, final String permissionName, final Location appendAt) throws PatternSyntaxException {
     super(pattern, values, permissionName);
     this.location = appendAt;
   }
